[package]
name = "literate-robot"
version = "0.1.0"
authors = ["drzezga <19654689+drzezga@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", optional = true }
itertools = "0.10.0"